--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.application.name=ApiExam
-
-
+spring.application.name=ApiExamPartTwo
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ApiExam
@@ -10,6 +8,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
-#logging.level.org.springframework=INFO
-#logging.level.com.rene.bankingapp=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
